# Embebidos

./: .gitignore
C/: CMakeLists.txt
Reto_code/main/: CMakeLists.txt  hello_world_main.c
Reto_code/main/LIBRERIA/: CMakeLists.txt
micropy/: SensorDHT.py  amogos.py  boot.py  connect_eBS.py  draw.py  flash.sh  main.py  max6675.py  memo.py  reto.py  reto_con_webpage.py  reto_ml.py  senddata.py  simple_regresion.py  ssd1306.py  temperature_server.py  webpage.py
