idf_component_register(
    SRCS "u8x8_cad.c"
         "u8x8_d_ssd1305.c"
         "u8x8_d_st7571.c"
         "mui.c"
         "u8x8_capture.c"
         "u8x8_d_ssd1306_128x32.c"
         "u8x8_d_st7586s_erc240160.c"
         "mui_u8g2.c"
         "u8x8_d_a2printer.c"
         "u8x8_debounce.c"
         "u8x8_d_hd44102.c"
         "u8x8_d_ssd1306_2040x16.c"
         "u8x8_d_st7586s_ymc240160.c"
         "u8x8_d_st7920.c"
         "u8x8_d_uc1601.c"
         "u8x8_d_uc1608.c"
         "u8x8_d_uc1611.c"
         "u8x8_d_uc1638.c"
         "u8x8_input_value.c"
         "u8x8_selection_list.c"
         "u8x8_u8toa.c"
         "u8g2_fonts.c"
         "u8g2_polygon.c"
         "u8log_u8g2.c"
         "u8x8_d_ssd1309.c"
         "u8x8_d_st7565.c"
         "u8x8_d_ks0108.c"
         "u8x8_d_ssd1306_64x32.c"
         "u8x8_d_st7567.c"
         "u8x8_d_lc7981.c"
         "u8x8_d_ssd1306_64x48.c"
         "u8x8_d_st7571.c"
         "u8x8_d_ld7032_60x32.c"
         "u8x8_d_ssd1306_72x40.c"
         "u8x8_d_st7586s_erc240160.c"
         "u8x8_d_ls013b7dh03.c"
         "u8x8_d_ssd1306_96x16.c"
         "u8x8_d_st7586s_ymc240160.c"
         "u8x8_d_max7219.c"
         "u8x8_d_ssd1306_96x40.c"
         "u8x8_d_st7588.c"
         "u8x8_d_pcd8544_84x48.c"
         "u8x8_d_ssd1309.c"
         "u8x8_d_st7920.c"
         "u8x8_d_pcf8812.c"
         "u8x8_d_ssd1316.c"
         "u8x8_d_stdio.c"
         "u8x8_d_pcf8814_hx1230.c"
         "u8x8_d_ssd1317.c"
         "u8x8_d_t6963.c"
         "u8x8_d_s1d15300.c"
         "u8x8_d_ssd1318.c"
         "u8x8_d_uc1601.c"
         "u8x8_d_s1d15721.c"
         "u8x8_d_ssd1320.c"
         "u8x8_d_uc1604.c"
         "u8x8_d_s1d15e06.c"
         "u8x8_d_ssd1322.c"
         "u8x8_d_uc1608.c"
         "u8x8_d_sbn1661.c"
         "u8x8_d_ssd1325.c"
         "u8x8_d_uc1609.c"
         "u8x8_d_sed1330.c"
         "u8x8_d_ssd1326.c"
         "u8x8_d_uc1610.c"
         "u8x8_d_sh1106_64x32.c"
         "u8x8_d_ssd1327.c"
         "u8x8_d_uc1611.c"
         "u8x8_d_sh1106_72x40.c"
         "u8x8_d_ssd1329.c"
         "u8x8_d_uc1617.c"
         "u8x8_d_sh1107.c"
         "u8x8_d_ssd1362.c"
         "u8x8_d_uc1638.c"
         "u8x8_d_sh1108.c"
         "u8x8_d_ssd1606_172x72.c"
         "u8x8_d_uc1701_dogs102.c"
         "u8x8_d_sh1122.c"
         "u8x8_d_ssd1607_200x200.c"
         "u8x8_d_uc1701_mini12864.c"
         "u8x8_8x8.c"
         "u8x8_d_st7511.c"
         "u8x8_d_st7528.c"
         "u8x8_byte.c"
         "u8x8_d_st75160.c"
         "u8x8_d_st75320.c"
         "u8x8_fonts.c"
         "u8x8_d_st75256.c"
         "u8x8_d_st7539.c"
         "u8x8_gpio.c"
         "u8x8_d_st75320.c"
         "u8x8_d_st7565.c"
    INCLUDE_DIRS "."
)
